--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,13 +11,10 @@ repos:
         exclude: tests/testdata
       - id: trailing-whitespace
         exclude: tests/testdata/well_trajectory/.*/expected
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.6.1
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.9.4
     hooks:
-      - id: ruff
-        args:
-          - --fix
-          - --exit-non-zero-on-fix
-      - id: ruff-format
-        args:
-          - --check
+    - id: ruff
+      args: [ --fix ]
+    - id: ruff-format
