--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -40,6 +40,7 @@ jobs:
       - name: "Install package"
         run: |
           pip install .[test]
+          pip install ert@git+https://github.com/equinor/ert
 
       - name: "Test package everest-models"
         run: |
