--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "everest-models"
 description = "Module containing a collection of forward models for everest"
 readme = "README.md"
 license = {text = "GPL-3.0"}
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 authors = [
     {name="Equinor ASA"},
 ]
@@ -18,6 +18,7 @@ classifiers = [
     "Programming language :: Python :: 3.12",
 ]
 dependencies = [
+    "ert",  # Specifying git as source breaks the komodo testing
     "resdata",
     "Jinja2>=3.1.2",
     "numpy>=1.23.2",
@@ -38,7 +39,6 @@ dynamic = [
 
 [project.optional-dependencies]
 test = [
-    "ert",  # Specifying git as source breaks the komodo testing
     "decorator",
     "hypothesis",
     "mock",
@@ -99,7 +99,7 @@ testpaths = [
     "tests"
 ]
 markers = [
-    "slow",
+    "run-slow",
     "resinsight"
 ]
 
