--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,6 +25,13 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+
+      - name: Install Ubuntu dependencies
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install libegl1 -y
+
       - uses: "actions/checkout@v4"
         with:
           fetch-depth: 0
