Revert "Remove all scaling from well trajectory"
This reverts commit 42e3bcfa681a7b14fdbef7142d36cd7b439ac5b7.

--- a/tests/testdata/well_constraints/well_constraint_input.yml
+++ b/tests/testdata/well_constraints/well_constraint_input.yml
@@ -2,16 +2,25 @@ INJECT1:
     1:
       phase:
         options: [water, gas]
+      rate:
+        min: 0
+        max: 1000
       duration:
         value: 50
     2:
       phase:
         options: [water, gas]
+      rate:
+        min: 0
+        max: 1000
       duration:
         value: 60
     3:
       phase:
         options: [water, gas]
+      rate:
+        min: 0
+        max: 1000
       duration:
         value: 70
     4:
@@ -26,10 +35,16 @@ INJECT2:
     1:
       phase:
         options: [water, gas]
+      rate:
+        min: 500
+        max: 1000
       duration:
         value: 50
     2:
       phase:
         options: [water, gas]
+      rate:
+        min: 500
+        max: 1000
       duration:
         value: 60
