Remove trailing comma for optional types in schemas

--- a/docs/reference/well_constraints/config.yml
+++ b/docs/reference/well_constraints/config.yml
@@ -23,7 +23,7 @@
     # Default: value=None
     rate:
 
-      # Datatype: number,
+      # Datatype: number
       # Required: False
       # Default: null
       value: <REPLACE>
@@ -32,7 +32,7 @@
     # Default: value=None
     duration:
 
-      # Datatype: number,
+      # Datatype: number
       # Required: False
       # Default: null
       value: <REPLACE>
