--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
+      - id: no-commit-to-branch
       - id: check-added-large-files
       - id: check-toml
       - id: check-yaml
@@ -13,7 +14,7 @@ repos:
         exclude: tests/testdata/well_trajectory/.*/expected
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.6
+    rev: v0.12.11
     hooks:
     - id: ruff
       args: [ --fix ]
