--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Run pre-commit
         run: |
-          pre-commit run --all-files --hook-stage=manual --show-diff-on-failure
+          SKIP=no-commit-to-branch pre-commit run --all-files --hook-stage=manual --show-diff-on-failure
