Update ResInsight related tests
- Make `rips`/`lasio` optional dependencies, for the case that
  ResInsight support is not required/available.
- Make sure that ResInsight support in the code is optional.
- Skips ResInsight tests if `rips` is not installed.
- Add a `--run-slow` flag to the ResInsight tests, to make sure that all
  tests run.

--- a/.github/workflows/test_resinsight.yml
+++ b/.github/workflows/test_resinsight.yml
@@ -8,6 +8,7 @@ on:
       - main
     tags: "*"
   pull_request:
+  workflow_dispatch:
 
 env:
   ERT_SHOW_BACKTRACE: 1
@@ -146,9 +147,9 @@ jobs:
         run: |
           pip install --upgrade pip
           # Make sure we use a compatible rips:
-          pip install .[test]
-          pip install rips==${{ env.RIPS_VERSION }}
+          pip install .[test,rips]
+          pip install -U rips==${{ env.RIPS_VERSION }}
       - name: Run tests using resinsight
         run: |
           ${{ github.workspace }}/${{ env.INSTALL_DIR }}/bin/ResInsight --console --version
-          RESINSIGHT_EXECUTABLE="${{ github.workspace }}/${{ env.INSTALL_DIR }}/bin/ResInsight" pytest -sv --test-resinsight -m resinsight
+          RESINSIGHT_EXECUTABLE="${{ github.workspace }}/${{ env.INSTALL_DIR }}/bin/ResInsight" pytest -sv --test-resinsight -m resinsight --run-slow
