--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: Testing
+name: Test forward models
 
 on:
  push:
@@ -6,7 +6,7 @@ on:
      - main
    tags: "*"
  pull_request:
-
+ workflow_dispatch:
 
 env:
   ERT_SHOW_BACKTRACE: 1
@@ -32,7 +32,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install libegl1 -y
 
-      - uses: "actions/checkout@v4"
+      - uses: "actions/checkout@v5"
         with:
           fetch-depth: 0
 
