--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,6 @@ dependencies = [
     "fmu-steaclient @ git+https://github.com/equinor/fmu-steaclient",
     "pydantic",
     "ortools>=9.3",
-    "rips>=2024.9.1.3",
-    "lasio",
     "scipy"
 ]
 dynamic = [
@@ -38,6 +36,7 @@ dynamic = [
 
 [project.optional-dependencies]
 ert = ["ert"]
+rips = ["lasio", "rips>=2024.9.1.3"]
 test = [
     "decorator",
     "hypothesis",
