Make ert an optional dependency
- Make ERT an optional dependency, since the forward models do not
  strictly require it (only the plugin-functionality for everest).
- Removes  the ERT-dependent `test_well_swapping_integration.py`
  because `test_well_swapping_workflow.py` covers the same workflow.
- Skips tests that require ERT, if ERT is not installed.
- Adds an `ert` mark for selectively testing ERT integration.
- Add a `test_ert.yml` workflow to explicitly run tests that depend on
  ERT. This tests against the main branch of the ERT repository.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
     "Programming language :: Python :: 3.12",
 ]
 dependencies = [
-    "ert>=16.0.b0",  # Specifying git as source breaks the komodo testing
     "resdata",
     "Jinja2>=3.1.2",
     "numpy>=1.23.2",
@@ -38,6 +37,7 @@ dynamic = [
 "Repository" = "https://github.com/equinor/everest-models"
 
 [project.optional-dependencies]
+ert = ["ert"]
 test = [
     "decorator",
     "hypothesis",
@@ -99,8 +99,9 @@ testpaths = [
     "tests"
 ]
 markers = [
-    "slow",
-    "resinsight"
+    "ert",
+    "resinsight",
+    "slow"
 ]
 
 log_cli = 0
