--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,11 +16,11 @@ jobs:
     name: "Python ${{ matrix.python-version }} on ${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
         os: [ ubuntu-latest]
         include:
           - os: macos-latest
-            python-version: "3.12"
+            python-version: "3.13"
 
     runs-on: ${{ matrix.os }}
 
