--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Programming language :: Python",
     "Programming language :: Python :: 3.11",
     "Programming language :: Python :: 3.12",
+    "Programming language :: Python :: 3.13",
 ]
 dependencies = [
     "resdata",
