--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ select = [
     "C",  # flake8-comprehensions
     "DJ",
     "E",  # pycodestyle errors
+    "ERA",
     "F",  # pyflakes
     "FA",
     "FAST",
